--- a/09/index.html
+++ b/09/index.html
@@ -5,15 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type="module" defer src="./main.js"></script>
+    <style>
+        body{
+            height: 1000px;
+            padding: 500px 0;
+        }
+        .parent{
+            width: 300px;
+            height: 200px;
+            margin-top: 1000px;
+            padding: 20px;
+            overflow: auto;
+            border: 10px solid;
+        }
+        .child{
+            height: 100px;
+            margin-top: 100px;
+            border: 10px solid red;
+        }
+    </style>
 </head>
 <body>
-    <!-- <h1>09 DOM</h1> -->
     <div class="parent">
-        <!-- 주석 -->
         <div class="child">1</div>
-        텍스트1
-        <div id="child2" class="child">2</div>
-        텍스트2
+        <div class="child">2</div>
     </div>
 </body>
 </html>
