--- a/12/index.html
+++ b/12/index.html
@@ -7,6 +7,7 @@
   <script type="module" defer src="./main.js"></script>
 </head>
 <body>
-  <h1>12 심화 학습</h1>
+  <h1>Hello World!</h1>
+  <h2>Hello World!</h2>
 </body>
 </html>
