--- a/12/index.html
+++ b/12/index.html
@@ -7,7 +7,11 @@
   <script type="module" defer src="./main.js"></script>
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <h2>Hello World!</h2>
+  <button>REMOVE!!</button>
+
+  <div class="parent">
+    <div class="child">1</div>
+    <div class="child">2</div>
+  </div>
 </body>
 </html>
